# modify-crc32

./: Cargo.toml  README.md
.github/workflows/: release.yaml
src/: lib.rs  main.rs
