[package]
name = "modify-crc32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.10"
crc32fast = "1.3.2"
kdam = { version = "0.3.0", features = ["template", "gradient"] }
rprompt = "2.0.2"

[dev-dependencies]
fastrand = "1.9.0"
rayon = "1.7.0"
